# rescriptdep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  dune-project  rescriptdep.opam  run_infinite_loop_debug.sh
.github/workflows/: build.yml  test.yml  vscode-extension.yml
lib/: cmi_parser.ml  dependency_graph.ml  dune  formatter.ml  parse_utils.ml  parser.ml  parser.mli
scripts/: run-ci-tests.sh
test/: benchmark.ml  dune  test_ast.ml  test_cmt_imports.ml  test_cmt_values.ml  test_namespace.ml  test_rescriptdep.ml  test_rewatch_paths.ml  test_support.ml
test/fixtures/: FollowUtils.cmt  WebView.cmt  app.cmt  logger.cmt  math.cmt  rescript.json  rewatch.json  utils.cmt
test/pnpm_workspace/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
test/pnpm_workspace/apps/seller/: package.json  rescript.json
test/pnpm_workspace/apps/seller/src/: App.bs.js  App.res
test/pnpm_workspace/apps/web/: package.json  rescript.json
test/pnpm_workspace/apps/web/src/: App.mjs  App.res
test/rescript/: .gitignore  package.json  pnpm-lock.yaml  rescript.json
test/rescript/src/: app.bs.js  app.res  comp0.bs.js  comp0.res  logger.bs.js  math.bs.js  math.res  utils.bs.js  utils.res
test/rewatch/: package.json  pnpm-lock.yaml
test/rewatch/src/: logger.res  math.bs.js  math.res  utils.bs.js
vscode-rescriptdep/: README.md  package.json  pnpm-lock.yaml
vscode-rescriptdep/src/: extension.ts
