(library
 (name test_support)
 (modules test_support))

(tests
 (names test_namespace)
 (modules test_namespace)
 (libraries rescriptdep))

(executables
 (names
  test_rescriptdep
  test_cmt_imports
  test_cmt_values
  test_ast)
 (modules
  test_rescriptdep
  test_cmt_imports
  test_cmt_values
  test_ast)
 (libraries rescriptdep str test_support))

(executable
 (name benchmark)
 (libraries rescriptdep str)
 (modules benchmark))

(rule
 (alias bench)
 (deps
  (glob_files fixtures/*.cmt))
 (action
  (run ./benchmark.exe)))

(dirs :standard fixtures)

(data_only_dirs fixtures)
